# weighted_hqp

./: CMakeLists.txt  README.md  package.xml
include/HQP_Hcod/: HCod.hpp  Random.hpp  cod.hpp  eHQP_solver.hpp  ehqp_primal.hpp  givens.hpp  iHQP_solver.hpp  step_length.hpp
include/weighted_hqp/: HCod.hpp  InitSet.hpp  Random.hpp  Up.hpp  cod.hpp  eHQP_solver.hpp  ehqp_primal.hpp  givens.hpp  iHQP_solver.hpp  step_length.hpp
src/: HCod(backup_equal).cpp  HCod.cpp  InitSet.cpp  Random.cpp  Up.cpp  Up_backup(gg).cpp  cod.cpp  eHQP_solver.cpp  ehqp_primal.cpp  ehqp_primal_backup(gg).cpp  givens.cpp  iHQP_solver.cpp  step_length.cpp
unitTesting/: CMakeLists.txt  InitSet.cpp  Random.cpp  cod.cpp  ehqp_test.cpp  hcod.cpp  hcod_ihqp.cpp  ihqp_test.cpp  ihqp_vs_qpoases.cpp  wehqp_test.cpp  wihqp_test.cpp
