<?xml version="1.0"?>
<package format="3">
  <name>weighted_hqp</name>
  <version>1.0.0</version>
  <description>
    weighted_hqp
  </description>
  
  <license>BSD</license>
  <author>Sanghyun Kim</author>
  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <build_depend>git</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <depend>kimm_qpoases</depend>
  <depend>boost</depend>
  <depend>graphviz</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
